// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InviteCollaborator RecipientContainer displays an avatar image if capability is present 1`] = `
<span class="oc-recipient files-share-invite-recipient">
  <span aria-hidden="true" class="vue-avatar--wrapper oc-avatar oc-recipient-avatar" data-test-user-name="Albert Einstein" focusable="false" style="width: 16.8px; height: 16.8px; line-height: 16.8px; background-color: rgb(194, 28, 83); font-size: 6px; font-family: Helvetica, Arial, sans-serif; color: white;" width="16.8">
    <span class="avatarInitials">AE</span>
  </span>
  <p class="oc-recipient-name">Albert Einstein</p>
  <button aria-label="Deselect Albert Einstein" class="files-share-invite-recipient-btn-remove oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <ocicon-stub accessiblelabel color filltype="fill" name="close" size="small" type="span" variation="passive"></ocicon-stub>
  </button>
</span>
`;

exports[`InviteCollaborator RecipientContainer renders a recipient with a deselect button different recipients for different shareTypes 1`] = `
<span class="oc-recipient files-share-invite-recipient">
  <ocicon-stub accessiblelabel="User" class="oc-recipient-icon" color filltype="fill" name="user" size="small" type="span" variation="passive"></ocicon-stub>
  <p class="oc-recipient-name">Albert Einstein</p>
  <button aria-label="Deselect Albert Einstein" class="files-share-invite-recipient-btn-remove oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <ocicon-stub accessiblelabel color filltype="fill" name="close" size="small" type="span" variation="passive"></ocicon-stub>
  </button>
</span>
`;

exports[`InviteCollaborator RecipientContainer renders a recipient with a deselect button different recipients for different shareTypes 2`] = `
<span class="oc-recipient files-share-invite-recipient">
  <ocicon-stub accessiblelabel="User" class="oc-recipient-icon" color filltype="fill" name="user" size="small" type="span" variation="passive"></ocicon-stub>
  <p class="oc-recipient-name">Albert Einstein</p>
  <button aria-label="Deselect Albert Einstein" class="files-share-invite-recipient-btn-remove oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <ocicon-stub accessiblelabel color filltype="fill" name="close" size="small" type="span" variation="passive"></ocicon-stub>
  </button>
</span>
`;

exports[`InviteCollaborator RecipientContainer renders a recipient with a deselect button different recipients for different shareTypes 3`] = `
<span class="oc-recipient files-share-invite-recipient">
  <ocicon-stub accessiblelabel="User" class="oc-recipient-icon" color filltype="fill" name="user" size="small" type="span" variation="passive"></ocicon-stub>
  <p class="oc-recipient-name">Albert Einstein</p>
  <button aria-label="Deselect Albert Einstein" class="files-share-invite-recipient-btn-remove oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <ocicon-stub accessiblelabel color filltype="fill" name="close" size="small" type="span" variation="passive"></ocicon-stub>
  </button>
</span>
`;

exports[`InviteCollaborator RecipientContainer renders a recipient with a deselect button different recipients for different shareTypes 4`] = `
<span class="oc-recipient files-share-invite-recipient">
  <ocicon-stub accessiblelabel="User" class="oc-recipient-icon" color filltype="fill" name="user" size="small" type="span" variation="passive"></ocicon-stub>
  <p class="oc-recipient-name">Albert Einstein</p>
  <button aria-label="Deselect Albert Einstein" class="files-share-invite-recipient-btn-remove oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <ocicon-stub accessiblelabel color filltype="fill" name="close" size="small" type="span" variation="passive"></ocicon-stub>
  </button>
</span>
`;

exports[`InviteCollaborator RecipientContainer renders a recipient with a deselect button different recipients for different shareTypes 5`] = `
<span class="oc-recipient files-share-invite-recipient">
  <ocicon-stub accessiblelabel="User" class="oc-recipient-icon" color filltype="fill" name="user" size="small" type="span" variation="passive"></ocicon-stub>
  <p class="oc-recipient-name">Albert Einstein</p>
  <button aria-label="Deselect Albert Einstein" class="files-share-invite-recipient-btn-remove oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <ocicon-stub accessiblelabel color filltype="fill" name="close" size="small" type="span" variation="passive"></ocicon-stub>
  </button>
</span>
`;
